--- a/keylogweb/src/main/resources/application.yaml
+++ b/keylogweb/src/main/resources/application.yaml
@@ -8,9 +8,10 @@ spring:
 
   # DataSource Configuration
   datasource:
-    url: jdbc:postgresql://localhost:5432/keylog_db
-    username: postgres
-    password: pos
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/keylog?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+    username: root
+    password: smd@12345
 
   # JPA Configurations
   jpa:
