--- a/keylogweb/pom.xml
+++ b/keylogweb/pom.xml
@@ -37,6 +37,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+        </dependency>
 
 
         <!-- Thymeleaf -->
