Fix UI and change root permissions

--- a/keylogapp/app/src/main/AndroidManifest.xml
+++ b/keylogapp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.maemresen.infsec.keylogapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
